@@ -2,6 +2,7 @@
 v1.0.0-git
 ----------
 
+[jan] Officially support PHP 7.
 [jan] Fix several notices and warnings
       (skhorde@smail.inf.fh-bonn-rhein-sieg.de).
 [jan] Don't use LIKE search on inventory ID field (Bug #12976).
